# min-renderer-d3d12

./: .clang-format  .gitignore  Arabesque.sln  Arabesque.vcxproj  Arabesque.vcxproj.filters  CMakeLists.txt  Package.appxmanifest  README.md  imgui.ini
Include/: camera_manager.hpp  constant.hpp  control.hpp  directx.hpp  directx_constant.hpp  directx_manager.hpp  entity.hpp  entity_directx.hpp  entity_shaders.hpp  entity_shapes.hpp  entity_texture.hpp  global.hpp  gui.hpp  gui_manager.hpp  mesh.hpp  object.hpp  param.hpp  parameter.hpp  scene.hpp  shaders.hpp  shape.hpp  system_variables.hpp  texture.hpp  ui.hpp  window.hpp  window_manager.hpp  world.hpp
Include/Components/: directx_component.hpp  map_component.hpp  shader_component.hpp  shape_component.hpp
Include/DirectX/: directx_constant.hpp  directx_forward_render.hpp  directx_imgui_render.hpp  directx_manager.hpp  directx_msaa_render.hpp  directx_postprocess_render.hpp  directx_shadow_render.hpp
Resource/: LICENSE
Source/: App.cpp  App.h  Main.cpp  Main.h  Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h  ShaderStructures.h  main.cpp
Source/Shader/: ColorShaders.hlsl  PhongShaders.hlsl  PostprocessShaders.hlsl  Shaders.hlsl  ShadowMappingShaders.hlsl  SkydomeShaders.hlsl  VCShaders.hlsl
